Fix add button styles on small screens.

--- a/styles/main.css
+++ b/styles/main.css
@@ -25,26 +25,23 @@
 /* line 20, ../../app/styles/main.scss */
 
 .shareabouts-add-button-container {
-  left: 1.5em;
+  left: 0;
   bottom: 0;
   margin-left: 0;
 }
 
-/* line 27, ../../app/styles/main.scss */
+/* line 26, ../../app/styles/main.scss */
 
-.shareabouts-auth-container,
-.shareabouts-auth-menu {
-  float: left;
-  /*  background-color: white;
-    border: 1px solid black;
-    padding: 0.5em;
-  */
+.shareabouts-add-button {
+  width: 100%;
+  padding-left: 0;
+  padding-right: 0;
 }
 
-/* line 33, ../../app/styles/main.scss */
+/* line 32, ../../app/styles/main.scss */
 
-.shareabouts-auth-container {
-  width: 50px;
+.panel-open .shareabouts-add-button-container {
+  display: none;
 }
 
 /* line 37, ../../app/styles/main.scss */
@@ -54,78 +51,68 @@
   width: 50px;
 }
 
-/* line 41, ../../app/styles/main.scss */
-
-.shareabouts-auth-menu {
-  margin-bottom: 10px;
-}
-
-/* line 45, ../../app/styles/main.scss */
-
-.shareabouts-auth-menu:before,
-.shareabouts-auth-menu:after {
-  content: '';
-  width: 0;
-  height: 0;
-  border: 17px solid white;
-  position: absolute;
-  top: 100%;
-  left: 1em;
-  border-right-color: transparent;
-  border-bottom-color: transparent;
-  border-left-color: transparent;
-}
-
-/* line 57, ../../app/styles/main.scss */
-
-.shareabouts-auth-menu:before {
-  border-top-color: black;
-  margin-top: 1px;
-}
-
-/* line 62, ../../app/styles/main.scss */
+/* line 42, ../../app/styles/main.scss */
 
 .shareabouts-geometry-set .form-instructions {
   display: none;
 }
 
-/* line 66, ../../app/styles/main.scss */
+/* line 46, ../../app/styles/main.scss */
 
 .survey-items {
   list-style: none;
   margin-left: 0;
 }
 
-/* line 71, ../../app/styles/main.scss */
+/* line 51, ../../app/styles/main.scss */
 
 .survey-items .avatar {
   height: 25px;
   width: 25px;
 }
 
-/* line 76, ../../app/styles/main.scss */
+/* line 56, ../../app/styles/main.scss */
 
 .avatar {
   height: 50px;
   width: 50px;
 }
 
-/* line 81, ../../app/styles/main.scss */
+/* line 61, ../../app/styles/main.scss */
 
 textarea {
   height: 100px;
 }
 
-/* line 85, ../../app/styles/main.scss */
+/* line 65, ../../app/styles/main.scss */
 
 .browsehappy {
   margin-bottom: 0;
 }
 
 @media only screen and (min-width: 40.063em) {
-  /* line 91, ../../app/styles/main.scss */
+  /* line 71, ../../app/styles/main.scss */
 
   #shareabouts-container {
     height: 600px;
+  }
+
+  /* line 75, ../../app/styles/main.scss */
+
+  .shareabouts-add-button-container {
+    left: 1.5em;
+  }
+
+  /* line 79, ../../app/styles/main.scss */
+
+  .shareabouts-add-button {
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+
+  /* line 84, ../../app/styles/main.scss */
+
+  .panel-open .shareabouts-add-button-container {
+    display: block;
   }
 }
